feat(projects): add confirmed deletion
Closes #30
